<resources>
    <string name="app_name">Flixat</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now playing</string>
    <string name="search">Search</string>
    <string name="runtime_format">%s min</string>
    <string name="detail_back_content_description">Back</string>
    <string name="detail_movie_image_content_description">Movie poster image</string>
    <string name="detail_watch_providers_label">Watch providers</string>
    <string name="detail_overview_label">Overview</string>
    <string name="detail_view_trailer_btn_text">View trailer</string>
    <string name="detail_cast_label">Cast</string>
    <string name="similar_label">Similar</string>
    <string name="permission_denied_explanation">To show you personalized results, we require location permissions.</string>
    <string name="dialog_permission_title">Permissions needed</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="country_preference">Country</string>
    <string name="theme_settings_preference">Theme settings</string>
    <string name="no_connection">No internet connection, please retry.</string>
    <string name="retry">Retry</string>
    <string name="continue_text">Continue</string>
    <string name="about_flixat_text">Flixat was created by James Roberts. Source for the application can be found at www.github.com/jl-roberts. You can find me at www.twitter.com/xoomdev.</string>
    <string name="about_tmdb_text">Flixat is powered by The Movie Database for movie data. Visit them at www.themoviedb.org for more information.</string>
    <string name="about_just_watch_text">Watch provider information provided by TMDb is powered by JustWatch. Visit them at www.justwatch.com</string>
    <string name="no_internet_connection">No internet connection, please retry.</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
</resources>