<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/popularFragment"
        android:icon="@drawable/ic_baseline_whatshot_24"
        android:title="@string/popular" />
    <item
        android:id="@+id/nowPlayingFragment"
        android:icon="@drawable/ic_baseline_movies_24"
        android:title="@string/now_playing" />
</menu>